--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+          heorku_app_name: antoinetrial
+          heroku_email: antoinecanada@outlook.com
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
